# openrouter-freemodels-intelligence-overview

./: README.md  enrich_models.py  free_models_report.html  free_models_report.md  main.py  model_aliases.json  plan.md  pyproject.toml
.github/workflows/: update_report.yml
cache/: artificial_analysis_leaderboard.json  openrouter_models.json
data/cache/: artificial_analysis_leaderboard.json  openrouter_models.json
output/: free_models_report.html  free_models_report.md
src/: enrich_models.py  main.py
