[project]
name = "find-best-or-free-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "python-levenshtein>=0.27.3",
    "tabulate>=0.9.0",
    "thefuzz>=0.22.1",
]
